[YUNIKORN-2956] Fix layout break on Queues v2 page (#220)
Closes: #220

--- a/src/app/components/apps-view/apps-view.component.scss
+++ b/src/app/components/apps-view/apps-view.component.scss
@@ -19,7 +19,6 @@
 
 .top-section {
   width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
